0.485 2023-09-04
  [Exception Message Changes]
    * Error messages in the Sys::Time::Itimerval class are improved.
    
0.484 2023-09-04
  [New Features]
    
    * The following methods are added to the Sys::Socket class.
    
      static method to_family_sockaddr : Sys::Socket::Sockaddr ($addr : Sys::Socket::Sockaddr);
    
    * The following methods are added to the Sys::Socket::Sockaddr class.
    
      +  static method new : Sys::Socket::Sockaddr::In ();
      +  method DESTROY : void ();
      +  method set_sa_family : void ($family : int);
      
    * The following methods in the Sys::Socket::Sockaddr class is implemented.
    
      +  method sa_family : int ();
    
    * The following methods are added to the Sys class.
      + static method closedir : int ($dirp : Sys::IO::DirStream);
      +  static method opendir : int ($dh_ref : Sys::IO::DirStream[], $dir : string);
      +  static method bind : int ($sockfd : int, $addr : Sys::Socket::Sockaddr);
      +  static method listen : int ($sockfd : int, $backlog : int);
      +  static method accept : Sys::Socket::Sockaddr ($new_sockfd_ref : int*, $sockfd : int);
      +  static method connect : int ($sockfd : int, $addr : Sys::Socket::Sockaddr)
      +  static method getpeername : Sys::Socket::Sockaddr ($sockfd : int)
      +  static method getsockname : Sys::Socket::Sockaddr ($sockfd : int)
      +  static method recv : int ($sockfd : int, $buf : mutable string, $len : int, $flags : int, $buf_offset : int = 0);
      +  static method send : int ($sockfd : int, $buf : string, $len : int, $flags : int, $buf_offset : int = 0);
      +  static method shutdown : int ($sockfd : int, $how : int);
      +  static method socket : void ($sockfd_ref : int*, $domain : int, $type : int, $protocol : int);
      +  static method socketpair : int ($sock_fd1_ref : int*, $sock_fd2_ref : int*, $domain : int, $type : int, $protocol : int);
      +  static method shutdown : int ($sockfd : int, $how : int);