@@ -1,6 +1,10 @@
 0.485 2023-09-04
   [Exception Message Changes]
     * Error messages in the Sys::Time::Itimerval class are improved.
+  [New Features]
+    * The following methods are added to Sys::Socket.
+    
+      static method closesocket : int ($fd : int);
     
 0.484 2023-09-04
   [New Features]
